styles/globals.css
@import '../node_modules/water.css/out/dark.css';

/* * {
    outline: 1px solid red;
} */

hr {
    background-color: rgba(255, 255, 255, 0.25);
}

.hr-with-margin {
    margin-top: 25px;
    margin-bottom: 25px;
}

.site-header {
    margin-bottom: 15px;
}

.main-navbar {
    outline: 1px solid rgba(255, 255, 255, 0.25);
    padding-top: 5px;
    padding-bottom: 5px;
    border-radius: 5px;
    display: flex;
    flex-direction: row; 
    justify-content: center;
}

.project-card {
    outline: 1px solid rgba(255, 255, 255, 0.25);
    border-radius: 5px;
    padding-top: 5px; 
    padding-bottom: 5px;
    padding-left: 5px; 
    padding-right: 5px;
    margin-bottom: 10px;
}

.page-title-subtitle-container p {
    display: flex;
    justify-content: center;
}

.blog-ul {
    list-style-type: '=> '
}

.blog-datebar {
    text-decoration: underline;
    margin-top: 15px;
}

.spotify-section {
    padding-top: 5px;
    padding-bottom: 25px;
}

.spotify-weekly-title {
    width: 300px;
}

.spotify-weekly-container {
    display: flex;
    justify-content: right;
    margin-top: -85px;
}

